# Mini-Net-Sim

./: .gitignore
CPU-DES/: .codebasenotes-annotations.json  temp.cpp
CPU-DES/cpu-simulator-output_2025-07-01-22-53-35/: log
CPU-DES/src/: job.cc  job.h  main.cc  simulator.h
Canvas/: .clangd  CMakeLists.txt  README.md  shapes.cpp  test  testGraphics.cpp  testShapes.cpp
Canvas/.cache/clangd/index/: main.cpp.8CC667738E0BC7B4.idx  shapes.cpp.E819776441B37FED.idx
Network-DES/: CMakeLists.txt  PROJECT_ANALYSIS.md  README.md  main.cpp
Network-DES/include/: event.hpp  interface.hpp  link.hpp  logger.hpp  node.hpp  router.hpp  simulator.hpp  types.hpp
Network-DES/include/nodes/: host.hpp  node.hpp  router.hpp
Network-DES/include/packets/: packet-time-tracker.hpp  packet.hpp  packetHeaders.hpp  payload.hpp
Network-DES/scripts/: plan.txt
Network-DES/src/: event.cpp  interface.cpp  link.cpp  logger.cpp  node.cpp  protocol.cpp  router.cpp  simulator.cpp
Network-DES/src/nodes/: host.cpp  node.cpp  router.cpp
Network-DES/src/packets/: packet-time-tracker.cpp  packet.cpp  packetHeaders.cpp  payload.cpp
